--- a/My new Project/style.css
+++ b/My new Project/style.css
@@ -1,23 +1,23 @@
 body {
     background-color: lightblue;
     display: flex;
-    flex-direction: column; /* Stack items vertically */
-    align-items: flex-start; /* Align items to the left */
-    height: 100vh; /* Full viewport height */
-    margin: 0; /* Remove default margin */
-    text-align: center; /* Center text for main content */
+    flex-direction: column; 
+    align-items: flex-start; 
+    height: 100vh; 
+    margin: 0; 
+    text-align: center; 
 }
 
 .hidden {
-    display: none; /* Class to hide elements */
+    display: none; 
 }
 
 .message {
-    font-size: 2em; /* Increase text size */
-    position: absolute; /* Position text in the center */
-    top: 50%; /* Center vertically */
-    left: 50%; /* Center horizontally */
-    transform: translate(-50%, -50%); /* Adjust position */
+    font-size: 2em; 
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
 }
 
 .title-box {
